# arbling-brain-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/arbling_brain_reader/: __init__.py  brain.py  cli.py  server.py
tests/: conftest.py  test_brain.py  test_server.py
