[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arbling-brain-reader"
version = "0.1.1"
description = "Read-only MCP server that exposes any Arbling-schema markdown vault to Claude Code and other MCP clients"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["mcp", "claude", "knowledge-base", "markdown", "second-brain"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0,<2",
    "python-frontmatter>=1.0.0",
    # server.py imports anyio directly (offloads blocking Brain I/O via
    # anyio.to_thread); declare it explicitly rather than leaning on mcp's
    # transitive pin.
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
arbling-brain-reader = "arbling_brain_reader.cli:main"

[project.urls]
Repository = "https://github.com/yev-arbling/arbling-brain-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/arbling_brain_reader"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
